--- a/Intermediate-html-css/project-2/resource/style.css
+++ b/Intermediate-html-css/project-2/resource/style.css
@@ -1,42 +1,75 @@
 /*==================================== general ========================================= */
+html,
 body {
   margin: 0;
   padding: 0;
   --backgroundColor: #e2e8f0;
   --mainColor: #1992d4;
+  font-family: roboto;
+  width: 100%;
+  height: 100%;
 }
+
 button {
   background-color: var(--mainColor);
   color: white;
   border: 1px solid transparent;
-  border-radius: 20%;
+  border-radius: 2em;
+  height: 2.5em;
+  width: 6em;
+}
+@font-face {
+  font-family: robotoBold;
+  src: url(Roboto/Roboto-Bold.ttf);
+}
+@font-face {
+  font-family: roboto;
+  src: url(Roboto/Roboto-Regular.ttf);
 }
 /*==================================== container ========================================= */
 .container {
   display: flex;
   flex: 1;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   flex-direction: row;
 }
 /*==================================== container left section ========================================= */
 .container-left-section {
   display: flex;
   flex: 1;
+  flex-grow: 1;
   width: 100%;
   height: 100%;
   flex-direction: column;
+  color: white;
   background-color: var(--mainColor);
+  font-family: robotoBold;
+}
+.list-item i {
+  margin-right: 0.5em;
+}
+.list-item h3 {
+  font-size: 1.2em;
 }
 .list-item {
   display: flex;
   flex: 0;
   flex-direction: row;
+  /* margin-bottom: 0.8em; */
+  margin: 0.5em;
 }
+.sidebar-top {
+  flex-grow: 0.1;
+}
+.sidebar-mid {
+  flex-grow: 0.1;
+}
+
 /*==================================== container right section ========================================= */
 .container-right-section {
   display: flex;
-  flex: 4;
+  flex: 8;
   width: 100%;
   height: 100%;
   flex-direction: column;
@@ -56,23 +89,70 @@ button {
   border: 1px solid transparent;
   border-radius: 50%;
 }
+/* TODO: first row */
 .header-first-row {
   display: flex;
   flex: 1;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.search-group input {
+  flex: 1;
+  background-color: var(--backgroundColor);
+  border: 1px solid transparent;
+  border-radius: 2em;
 }
 .header-first-row img {
-  width: 1em;
-  height: 1em;
+  width: 1.3em;
+  height: 1.3em;
 }
+.search-group i {
+  margin-right: 1em;
+}
+.profile-group i {
+  margin-right: 1em;
+}
+.profile-group img {
+  margin-right: 1em;
+}
+.profile-group {
+  display: flex;
+  margin: 1em;
+  flex: 0;
+  justify-content: flex-end;
+}
+.search-group {
+  display: flex;
+  margin: 1em;
+  flex: 1;
+}
+/* TODO: second row */
 .header-second-row {
   display: flex;
   flex: 3;
   flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.user-group {
+  display: flex;
+  margin: 1em;
+  flex: 1;
+}
+.user-group img {
+  margin-right: 0.5em;
 }
 .header-second-row img {
   width: 2.5em;
   height: 2.5em;
+}
+
+.button-group {
+  margin: 1em;
+}
+.button-group button:hover {
+  cursor: pointer;
 }
 /*==================================== content ========================================= */
 .content {
@@ -83,9 +163,83 @@ button {
 }
 .grid-container {
   display: grid;
-  gap: 0.5rem;
-  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  gap: 1em;
+  margin: 1em;
+  grid-template: repeat(2, 1fr) / repeat(2, 1fr);
 }
-#big-card {
-  background-color: #1992d4;
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 30em;
+  height: 9em;
+  padding: 0.6em;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+}
+
+.card-header {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 10px;
+  background-color: #f2b01e;
+}
+
+.card-content {
+  margin-left: 20px;
+  height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.card-content p {
+  margin: 0;
+  color: #666;
+}
+.card-content h3 {
+  margin: 0 0 10px;
+}
+
+.card-footer {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.card-footer i {
+  color: #333;
+  font-size: 18px;
+}
+
+.vertical-card {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 1em;
+}
+.vertical-card h3 {
+  margin-bottom: 1em;
+}
+.vertical-card hr {
+  margin: 1em 0 1em 0;
+}
+.special-content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  height: 100%;
+}
+.main-content {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
 }
