--- a/Advanced HTML and CSS/project/style.css
+++ b/Advanced HTML and CSS/project/style.css
@@ -105,9 +105,78 @@ header {
 main {
   display: flex;
   flex: 1;
-  background-color: red;
 }
 /* TODO: grid 3x3 layout */
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: 100%;
+  padding: 5%;
+  gap: 2%;
+  row-gap: 4%;
+}
+.grid-item {
+  border: 1px solid rgba(0, 0, 0, 0.377);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.158);
+}
+/* TODO: card */
+.card {
+  height: 20rem;
+  width: fit-content;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  width: fit-content;
+  box-sizing: border-box;
+}
+/* TODO: split card content into flexbox, column*/
+.card-content {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  margin-top: 2%;
+  width: 100%;
+  overflow: hidden;
+
+  box-sizing: border-box;
+}
+.card-content > p {
+  margin: 4% 0 0 0;
+  text-align: left;
+  font-size: large;
+  height: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 22em;
+}
+.card img {
+  height: 50%;
+  width: 100%;
+  display: flex;
+  flex: 1;
+}
+/* TODO: split card first row into flexbox, row*/
+.card-content-first-row {
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+}
+.card-content-first-row h4 {
+  margin: 0;
+}
+#icon-group {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+}
+#share-icon {
+  margin: 1.3% 0 0 1%;
+}
+
 /* ============================================= footer ============================= */
 footer {
   background-color: var(--mainColor);
@@ -117,7 +186,7 @@ footer {
   padding: 4% 4% 0 4%;
   height: 30rem;
   color: white;
-  font-family: roboto;
+  font-family: idk;
   font-size: x-large;
 }
 /* TODO: contact section */
@@ -125,19 +194,16 @@ footer {
   display: flex;
   flex: 1;
   flex-direction: column;
-  height: 100%;
+  height: 90%;
 }
 /* TODO: image section */
 footer img {
   width: 50%;
-  height: 90%;
+  height: 95%;
 }
 .contact .icon-group {
-  display: flex;
-  flex: 1;
-  margin-right: 10%;
-  margin-bottom: 10%;
-  align-items: flex-end;
   color: black;
-  justify-content: end;
+  justify-content: flex-start;
+  margin: 2% 0 0 0;
+  padding: 0;
 }
