--- a/Advanced HTML and CSS/TOD-css-exercises/flex/02-flex-header/style.css
+++ b/Advanced HTML and CSS/TOD-css-exercises/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
-.header  {
+.header {
   font-family: monospace;
   background: papayawhip;
+  padding: 8;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -14,6 +19,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 8px;
 }
 
 a {
@@ -21,5 +30,4 @@ a {
   background: white;
   padding: 8px;
   /* this removes the line under the links */
-  text-decoration: none;
 }
