--- a/Advanced HTML and CSS/TOD-css-exercises/flex/06-flex-layout/style.css
+++ b/Advanced HTML and CSS/TOD-css-exercises/flex/06-flex-layout/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
@@ -23,4 +23,42 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+/* new code */
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+ul {
+  display: flex;
+  gap: 20px;
+  padding: 0;
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: rgb(121, 121, 121);
+  padding: 20px;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(214, 186, 186);
+}
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input {
+  margin-bottom: 20px;
+}
+button {
+  padding: 8px 16px;
 }
