--- a/Advanced HTML and CSS/TOD-css-exercises/foundations/06-cascade-fix/style.css
+++ b/Advanced HTML and CSS/TOD-css-exercises/foundations/06-cascade-fix/style.css
@@ -2,26 +2,22 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para.small-para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
+  font-size: 20px;
 }
 
 .para {
-  font-size: 22px;
+  font-size: 30px;
+  font-weight: bolder;
 }
 
-.confirm {
+.button.confirm {
   background: green;
   color: white;
   font-weight: bold;
-} 
+}
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,14 +25,13 @@ body {
   font-size: 20px;
 }
 
-.child {
+.text.child {
   color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
+  font-weight: bolder;
+  font-size: 30px;
 }
 
 div.text {
   color: rgb(0, 0, 0);
-  font-size: 22px;
   font-weight: 100;
 }
