--- a/Advanced HTML and CSS/TOD-css-exercises/grid/02-grid-layout-2/style.css
+++ b/Advanced HTML and CSS/TOD-css-exercises/grid/02-grid-layout-2/style.css
@@ -22,20 +22,23 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: 1 / 3;
+  grid-column: 1 / 6;
 }
 
 .sidebar {
-  background-color: #005B94;
+  background-color: #005b94;
   grid-row: 2 / 4;
+  grid-column: 1 / 2;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2 / 6;
 }
 
 .article {
-  background-color: #7E1DC3;
+  background-color: #7e1dc3;
+  grid-column: 2 / 6;
 }
 
 .article p {
@@ -47,5 +50,10 @@ html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1 / 6;
+}
+.container {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr 1fr 1fr; /* Thay đổi kích thước cột side */
+  gap: 20px;
 }
