--- a/Advanced HTML and CSS/TOD-css-exercises/grid/03-grid-layout-3/style.css
+++ b/Advanced HTML and CSS/TOD-css-exercises/grid/03-grid-layout-3/style.css
@@ -88,53 +88,46 @@
   font-size: 13px;
   font-weight: normal;
 }
-/* solotion */
+/* solution */
 .container {
   display: grid;
-  grid-template-columns: 1fr 4fr;
   gap: 4px;
 }
-
 .header {
-  grid-column: 1 / 3;
+  grid-row: 1;
+  grid-column: 1/4;
   display: grid;
-  grid-template-columns: 1fr 2fr;
 }
-
 .logo {
+  grid-column: 1;
   justify-self: start;
 }
-
 .menu {
-  align-self: center;
+  grid-column: 4;
 }
-
 .menu ul {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
 }
-
-.menu ul,
-.menu li {
-  list-style-type: none;
-}
-
 .sidebar {
-  grid-row: 2 / 4;
+  grid-row: 2/4;
+  grid-column: 1;
   display: grid;
-  gap: 50px;
-}
-
-.side-content,
-.photo {
-  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   align-items: center;
 }
-
+.nav {
+  grid-row: 2;
+  grid-column: 2/4;
+}
 .nav ul {
-  list-style-type: none;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+.article {
+  grid-row: 3;
+  grid-column: 2/4;
+  display: grid;
 }
 
 .article {
@@ -146,11 +139,10 @@
 .article .card {
   height: 200px;
 }
-
-.card p {
-  padding: 5px;
-}
-
 .footer {
-  grid-column: 1 / 3;
+  grid-row: 4;
+  grid-column: 1/4;
+}
+ul {
+  list-style-type: none;
 }
