finish css exercise

--- a/Advanced HTML and CSS/TOD-css-exercises/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/Advanced HTML and CSS/TOD-css-exercises/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,6 +7,7 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
 }
 
 .title {
@@ -15,13 +16,17 @@ body {
 
 .content {
   background: #e3f4ff;
+  padding: 10px;
 }
 
 .button-container {
+  margin-top: 10px;
   background: #e3f4ff;
+  padding-left: 150px;
 }
 
 button {
+  margin-right: 200px;
   background: white;
   border: 1px solid #eee;
 }
