--- a/React/cv-aplication/src/styles/canvas.css
+++ b/React/cv-aplication/src/styles/canvas.css
@@ -2,11 +2,14 @@
   display: flex;
   flex-direction: column;
   align-content: stretch;
+  margin-left: 5%;
 }
 .canvas__left {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  margin: 3%;
 }
 .canvas__left__avatar img {
   width: 150px;
@@ -19,4 +22,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.canvas__left__info h4,
+.canvas__left__info h2 {
+  margin: 0;
+}
+
+.canvas__container {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  min-width: 80%;
+}
+hr.solid {
+  border-top: 1px solid #bbb;
+  width: 100%;
 }
